# trade-pal

./: .gitignore  LICENSE  Projected_projection_results.csv  README.md  X_list.csv  X_weighted.csv  dev.sh  environment.yml  package.json  pyproject.toml  run_all.py
backend/: api.py  config.json  environment.yml  macro.py  ml.py  requirements.txt  tools.py
backend/data/: sp500.csv
backend/scripts/: warm_sp500_cache.py
frontend/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
frontend-next/: README.md  package-lock.json
frontend-next/app/: page.jsx
frontend-vite/: package-lock.json  package.json  vite.config.js
frontend-vite/src/: App.jsx  constants.js  globals.css
frontend-vite/src/__tests__/: App.test.jsx
frontend-vite/src/api/: client.js
frontend-vite/src/components/: NewsList.jsx  Sidebar.jsx  WatchlistRow.jsx
frontend-vite/src/hooks/: useOutsideClick.js  useSnapshots.js  useTheme.js  useTickerBundle.js
frontend-vite/src/test/: setup.js
frontend-vite/src/utils/: format.js
frontend/app/: globals.css  layout.jsx
frontend/pages/: _app.jsx  index.jsx
frontend/public/static/: main.js
frontend/src/: App.jsx  config.js  constants.js  globals.css
frontend/src/api/: client.js
frontend/src/components/: ChartPanel.jsx  Header.jsx  KpiTable.jsx  LoadingOverlay.jsx  MacroPanel.jsx  MenuSelect.jsx  MlControls.jsx  ScreenerModal.jsx  Sidebar.jsx  Sparkline.jsx  TrashIcon.jsx  (+1 more)
frontend/styles/: globals.css
multi_model_stock_predictor/: multi_model_stock_predictor.py
scripts/: check.sh
(+22 files in other folders)
